--- a/css/style.css
+++ b/css/style.css
@@ -494,6 +494,7 @@ a {
     top: auto; /*In order to cover style in article.styl*/
     bottom: 10px;
     padding: 0.2em 0.4em;
+    -webkit-border-radius: 6px;
     border-radius: 6px;
     border-style: outset;
     background: rgba(255,255,255,0.7);
@@ -521,6 +522,7 @@ a {
     margin-left: 0;
     padding: 10px;
     padding-left: 0;
+    -webkit-border-radius: 2.8%;
     border-radius: 2.8%;
     background: none;
     font-size: 1em;
@@ -535,6 +537,7 @@ a {
   #container .toc-article ol {
     margin: 0;
     padding: 0.5em;
+    -webkit-border-radius: 5px;
     border-radius: 5px;
     background: rgba(255,255,255,0.75);
   }
@@ -562,6 +565,7 @@ a {
     top: auto;
     bottom: 10px;
     padding: 0.2em 0.4em;
+    -webkit-border-radius: 6px;
     border-radius: 6px;
     border-style: outset;
     opacity: 0.9;
@@ -602,6 +606,7 @@ a {
   text-align: center;
   display: block;
   border: 5px solid #fff;
+  -webkit-border-radius: 50%;
   border-radius: 50%;
   width: 128px;
   height: 128px;
@@ -617,6 +622,7 @@ a {
 #header .profilepic img {
   width: 100%;
   height: 100%;
+  -webkit-border-radius: 50%;
   border-radius: 50%;
   -webkit-animation-duration: 0.4s;
   -moz-animation-duration: 0.4s;
@@ -764,6 +770,7 @@ a {
 #header .switch-part3 .switch-friends-link {
   display: inline-block;
   margin-right: 9px;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
   padding: 5px;
 }
@@ -784,6 +791,7 @@ a {
 #header .header-nav .social li {
   display: inline-block;
   width: 37px;
+  -webkit-border-radius: 50%;
   border-radius: 50%;
   margin: 0 2px 6px;
   font: 23px FontAwesome;
@@ -984,6 +992,7 @@ a {
   font-family: inherit;
   border: 2px solid transparent;
   border-bottom: 2px solid #d3d3d3;
+  -webkit-border-radius: 2px;
   border-radius: 2px;
   opacity: 0.2;
   background: none;
@@ -1029,6 +1038,7 @@ a {
   top: 30px;
   padding: 1px;
   border: none;
+  -webkit-border-radius: 5px;
   border-radius: 5px;
   cursor: pointer;
   outline: none;
@@ -1382,6 +1392,7 @@ color
   margin-right: 0.5em;
   margin-bottom: 0.11em;
   border: 1px solid #d3d3d3;
+  -webkit-border-radius: 50%;
   border-radius: 50%;
   background: #d3d3d3;
 }
@@ -1536,6 +1547,7 @@ color
   padding: 2px 4px;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
   border-radius: 2px;
   background: #88acdb;
   color: #fff;
@@ -1650,6 +1662,7 @@ li:hover {
   left: 0;
   margin-left: 0em;
   padding: 6px 10px 10px 50px;
+  -webkit-border-radius: 2.8%;
   border-radius: 2.8%;
   overflow: auto;
 }
@@ -2034,6 +2047,7 @@ li:hover {
   color: #8e908c;
 }
 .article-entry .highlight {
+  -webkit-border-radius: 2px;
   border-radius: 2px;
   max-height: 50em;
   margin-top: 0.5em;
@@ -2128,6 +2142,7 @@ li:hover {
   color: #808080;
   background: rgba(248,237,223,0.5);
   padding: 0.05em 0.3em;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
 }
 pre .comment,
@@ -2238,6 +2253,7 @@ pre .javascript .function {
   background: #4d4d4d;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
   border-radius: 50%;
   display: inline-block;
   color: #fff;
@@ -2390,6 +2406,7 @@ pre .javascript .function {
   color: #fff;
   width: 80px;
   text-align: center;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
   opacity: 0.8;
   position: absolute;
@@ -2409,6 +2426,7 @@ pre .javascript .function {
   height: 32px;
   width: 32px;
   background: #cecece;
+  -webkit-border-radius: 100px;
   border-radius: 100px;
   position: relative;
   overflow: hidden;
@@ -2452,6 +2470,7 @@ pre .javascript .function {
   position: absolute;
   -webkit-border-radius: 60px;
   -moz-border-radius: 60px;
+  -webkit-border-radius: 60px;
   border-radius: 60px;
   left: 10px;
   top: 8px;
@@ -2466,6 +2485,7 @@ pre .javascript .function {
   left: 4px;
   -webkit-border-radius: 60px;
   -moz-border-radius: 60px;
+  -webkit-border-radius: 60px;
   border-radius: 60px;
 }
 .switch-btn .icon-ctn .ribbon {
@@ -2491,6 +2511,7 @@ pre .javascript .function {
   border-style: solid;
   border-width: 0px 3px 3px 3px;
   border-color: #333;
+  -webkit-border-radius: 0 0 50px 50px;
   border-radius: 0 0 50px 50px;
   position: absolute;
   top: 16px;
@@ -2514,6 +2535,7 @@ pre .javascript .function {
   border-style: solid;
   border-width: 3px 0 0 3px;
   border-color: #333;
+  -webkit-border-radius: 50px 0 0 0;
   border-radius: 50px 0 0 0;
   position: absolute;
   left: -3px;
@@ -2525,6 +2547,7 @@ pre .javascript .function {
   border-style: solid;
   border-width: 3px 3px 0 3px;
   border-color: #333;
+  -webkit-border-radius: 50px 50px 0 0;
   border-radius: 50px 50px 0 0;
   position: absolute;
   top: 8px;
@@ -2548,6 +2571,7 @@ pre .javascript .function {
   border-style: solid;
   border-width: 0 3px 3px 0;
   border-color: #333;
+  -webkit-border-radius: 0 0 50px 0;
   border-radius: 0 0 50px 0;
   position: absolute;
   left: 5px;
@@ -2557,6 +2581,7 @@ pre .javascript .function {
   width: 12px;
   height: 14px;
   background: #333;
+  -webkit-border-radius: 5px 5px 0 0;
   border-radius: 5px 5px 0 0;
   margin-left: 10px;
   margin-top: 2px;
@@ -2602,6 +2627,7 @@ pre .javascript .function {
   float: left;
   padding: 0 5px 0px 10px;
   position: relative;
+  -webkit-border-radius: 0 5px 5px 0;
   border-radius: 0 5px 5px 0;
   margin: 5px 9px 5px 8px;
   opacity: 0.75;
@@ -2628,6 +2654,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   background-color: #fff;
+  -webkit-border-radius: 4px;
   border-radius: 4px;
   -webkit-box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.3);
   box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.3);
@@ -2724,10 +2751,12 @@ pre .javascript .function {
   display: block;
 }
 ::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 8px;
   border-radius: 8px;
   background-color: rgba(0,0,0,0.2);
 }
 ::-webkit-scrollbar-thumb:hover {
+  -webkit-border-radius: 8px;
   border-radius: 8px;
   background-color: rgba(0,0,0,0.5);
 }
@@ -2795,6 +2824,7 @@ pre .javascript .function {
   width: 6px;
   height: 6px;
   border: 1px solid #999;
+  -webkit-border-radius: 10px;
   -webkit-border-radius: 10px;
   border-radius: 10px;
   background: #aaa;
